More immersive journal edit experience

--- a/translations/it/journal.json
+++ b/translations/it/journal.json
@@ -9,6 +9,7 @@
 		"header": "Post",
 		"headerAdd": "Aggiungi nuovo post",
 		"headerEdit": "Modifica post",
+		"headerOptions": "Opzioni del post",
 		"author": "Modifica autorə",
 		"date": "Modifica data",
 		"title": "Titolo",
