--- a/translations/en/journal.json
+++ b/translations/en/journal.json
@@ -9,6 +9,7 @@
 		"header": "Post",
 		"headerAdd": "Add new post",
 		"headerEdit": "Edit post",
+		"headerOptions": "Post options",
 		"author": "Edit author",
 		"date": "Edit date",
 		"title": "Title",
