--- a/translations/en/frontHistory.json
+++ b/translations/en/frontHistory.json
@@ -14,7 +14,8 @@
 			"historyTitle": "Presence history",
 			"lastPresence": "Last it was {{presence}} / 10",
 			"addTitle": "How present are you in a scale from 0 to 10?",
-			"addButton": "Add it to the history"
+			"addButton": "Add it to the history",
+			"date": "Date"
 		},
 		"influencing": {
 			"select": "Select a member to influence",
