chore: update about

--- a/translations/it/about.json
+++ b/translations/it/about.json
@@ -1,5 +1,6 @@
 {
 	"header": "Informazione",
 	"version": "Versione {{version}}",
-	"madein": "Fatto con amore in Italia"
+	"madein": "Fatto con amore in Italia",
+	"privacyPolicy": "Politiche per la privacy"
 }
