--- a/translations/en/about.json
+++ b/translations/en/about.json
@@ -1,5 +1,6 @@
 {
 	"header": "About",
 	"version": "Version {{version}}",
-	"madein": "Made with love in Italy"
+	"madein": "Made with love in Italy",
+	"privacyPolicy": "Privacy Policy"
 }
