add default system

--- a/translations/en/appSettings.json
+++ b/translations/en/appSettings.json
@@ -11,10 +11,11 @@
 		"firstDayOfWeek": "First day of week"
 	},
 	"behaviorLabel": "Behavior",
+	"defaultSystem": "Default system",
 	"view": "Default tab",
 	"showMembersBeforeCustomFronts": "Show members before custom fronts",
 	"showSystemDescriptionInDashboard": "Show system description in dashboard",
 	"hideFrontingTimer": "Hide fronting timer",
-		"useIPC": "Send events to other applications",
+	"useIPC": "Send events to other applications",
 	"defaultFilterLabel": "Default search query for"
 }
