--- a/translations/it/appSettings.json
+++ b/translations/it/appSettings.json
@@ -11,6 +11,7 @@
 		"firstDayOfWeek": "Primo giorno della settimana"
 	},
 	"behaviorLabel": "Comportamento",
+	"defaultSystem": "Sistema predefinito",
 	"view": "Scheda predefinita",
 	"showMembersBeforeCustomFronts": "Mostra membrɜ prima dei front personalizzati",
 	"showSystemDescriptionInDashboard": "Mostra la descrizione del sistema nella dashboard",
