feat: add setting to toggle visibility of the default system in member list

--- a/translations/en/appSettings.json
+++ b/translations/en/appSettings.json
@@ -13,6 +13,7 @@
 	"behaviorLabel": "Behavior",
 	"defaultSystem": "Default system",
 	"view": "Default tab",
+	"showDefaultSystemInMemberList": "Show default system in member list",
 	"showMembersBeforeCustomFronts": "Show members before custom fronts",
 	"showSystemDescriptionInDashboard": "Show system description in dashboard",
 	"hideFrontingTimer": "Hide fronting timer",
