--- a/translations/it/appSettings.json
+++ b/translations/it/appSettings.json
@@ -13,6 +13,7 @@
 	"behaviorLabel": "Comportamento",
 	"defaultSystem": "Sistema predefinito",
 	"view": "Scheda predefinita",
+	"showDefaultSystemInMemberList": "Mostra il sistema predefinito nella lista membrɜ",
 	"showMembersBeforeCustomFronts": "Mostra membrɜ prima dei front personalizzati",
 	"showSystemDescriptionInDashboard": "Mostra la descrizione del sistema nella dashboard",
 	"hideFrontingTimer": "Nascondi il conteggio del tempo a front",
